--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Treky.in: Trekking Equipments, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi.">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/thinline.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trekking</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Trekking Equipments, Best Adventure Essentials in Delhi</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="https://static.elfsight.com/platform/platform.js" async></script>
     <script type="module" src="/src/index.jsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Trekking Store",
+        "name": "Treky.in: Trekking Equipments",
+        "image": "https://www.treky.in/assets/logobl-XB8lvGTy.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Govindpuri, Kalkaji, New Delhi",
+          "addressLocality": "Delhi",
+          "postalCode": "110019",
+          "addressCountry": "IN"
+        },
+        "telephone": "+91-955508889",
+        "url": "https://treky.in",
+        "description": "Treky.in: Trekking Equipments, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi."
+      }
+    </script>
   </body>
 </html>
