--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Trekking Store",
+        "@type": "WebSite Trekking Store",
         "name": "Treky.in: Trekking Equipments",
-        "image": "https://www.treky.in/assets/logobl-XB8lvGTy.png",
+        "image": "https://www.treky.in/assets/logobl-BWu_SLqD.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Govindpuri, Kalkaji, New Delhi",
