--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="favicon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Treky.in: Trekking Equipments, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi.">
+    <meta name="description" content="Treky.in: Trekking Equipment, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi.">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/thinline.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Trekking Equipments, Best Adventure Essentials in Delhi</title>
+    <title>Trekking Equipment, Best Adventure Essentials in Delhi</title>
   </head>
   <body>
     <div id="root"></div>
@@ -18,7 +18,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite Trekking Store",
-        "name": "Treky.in: Trekking Equipments",
+        "name": "Treky.in: Trekking Equipment",
         "image": "https://www.treky.in/assets/logobl-BWu_SLqD.png",
         "address": {
           "@type": "PostalAddress",
@@ -29,7 +29,7 @@
         },
         "telephone": "+91-955508889",
         "url": "https://treky.in",
-        "description": "Treky.in: Trekking Equipments, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi."
+        "description": "Treky.in: Trekking Equipment, Best Adventure Essentials in Govindpuri, Kalkaji, Delhi. Best trekking store in Delhi. Very affordabe trekking equipment and accessories store in Delhi."
       }
     </script>
   </body>
